new file:   __pycache__/brain.cpython-313.pyc 	new file:   __pycache__/main.cpython-313.pyc 	modified:   main.py 	modified:   static/index.html

--- a/static/index.html
+++ b/static/index.html
@@ -331,6 +331,9 @@
             });
 
             const data = await response.json();
+            if (!response.ok || data.status !== "success") {
+                throw new Error(data.message || "Request failed");
+            }
 
             // Render Results
             resultArea.style.display = 'block';
